# xorcipher

./: 1  <  CMakeLists.txt  Makefile  README.md  benchmark.sh  c_key  c_validate.c  c_validate.h  checkascii.c  checkascii.h  cipher.c  cipher.h  combination.c  combination.h  compile_commands.json  dict_analysis.c  dict_analysis.h  file.c  file.h  freq_analysis.c  freq_analysis.h  generate_test_bench.sh  hash_table  input.in  main  main.c  main.c~  make  options.c  options.h  output.out  read_file.c  read_file.h  readopt.c  readopt.h  test.sh  test_crack.sh  test_crack_stfu.sh  test_script.sh  (+3 more)
IO/: accents-utf-8.txt  bovary-isolatin1.txt  chinois-utf-8.rtf  long.txt  moyen.txt  output  output2  temp  test  test.txt
src/: c_validate.c  checkascii.c  cipher.c  cipher.h  combination.c  dict_analysis.c  file.c  freq_analysis.c  freq_analysis.h  options.c  options.h
test_bench/ref/: keys
tests/: file_list.txt  file_list_crack.txt  keys.txt
tests/crypted/: adijd_chinois-utf-8.rtf
tests/crypted_crack/: DfklEa__bovary-isolatin1.txt  DfklEa__moyen.txt  adijd_mini.txt  adijd_moyen.txt  df9_bovary-isolatin1.txt
tests/decrypted/: df9_mini.txt
tests/keys0/: adijd_bovary-isolatin1.txt  adijd_mini.txt  df9_bovary-isolatin1.txt  df9_mini.txt
tests/keys1/: adijd_mini.txt  df9_bovary-isolatin1.txt
tests/keys2/: adijd_mini.txt  df9_bovary-isolatin1.txt  df9_mini.txt
tests/keys3/: 1  2  3
tests/ref_crypted/: DfklEa__accents-utf-8.txt  DfklEa__chinois-utf-8.rtf  DfklEa__mini.txt  adijd_accents-utf-8.txt  adijd_bovary-isolatin1.txt  df9_accents-utf-8.txt  df9_moyen.txt  (+1 more)
(+2034 files in other folders)
